# mtp

./: .gitignore  README.md  libsetter.json  pyproject.toml  setup.py  startup_local.sh
mtp_cpp2py/: __init__.py
pymtp/: setup.py
pymtp/core/: __init__.py  _mtp.cpp
src/: ase_calculator_mtp.py  calculator.py  libsetter.py  lj_optimizer.py  op_lj.py  training.py  utils.py
src/example/: FePt.cif  example.ipynb  example.traj  executable.cfg  pot_executable.almtp  pot_test.almtp  test.cfg  test.ipynb
