[tool.poetry]
name = "mtp4py"
version = "0.1.0"
description = "moment tensor potentials optimized for ase calculator"
authors = ["TOMO <umma.shikka@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^2.0.1"
ase = "^3.23.0"

setuptools = "^72.1.0"
cython = "^3.0.11"
pip = "^24.2"
lammps = "^2024.8.29.0.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"
plotly = "^5.24.0"
nbformat = "^5.10.4"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
pre-commit = "^3.0.4"
ruff = "^0.4.4"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240808"

[tool.mypy]
disallow_any_explicit = false
disallow_any_generics = false
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = ["tests.*", 'gspread', 'yaml']
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=myproject --cov-report=html --doctest-modules --ignore=myproject/__main__.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 4

[project]
name = "mtp4py"
version = "0.1.0"
